--- a/ProiectTehniciDeProgramare-master/ProiectTP/WebContent/resources/css/user.css
+++ b/ProiectTehniciDeProgramare-master/ProiectTP/WebContent/resources/css/user.css
@@ -75,7 +75,7 @@ h2
 
 	background: rgba(0,0,0,0.9);
 	width:200px;
-	height:350px;
+	height:300px;
 	margin-left:10px;
 	float:left;
 	display: none;
@@ -118,7 +118,7 @@ a{
 	width: 100%;
 	height:608px;
 	background-color: rgba(242, 255, 255, 0.4);
-	z-index: 2;
+	z-index: 3;
 	display: none;
 	position: absolute;
 }
@@ -174,6 +174,7 @@ a{
 	margin-top: 10px;
 	
 }
+
 
 #hp {
 	position: absolute;
@@ -264,108 +265,131 @@ a{
 }
 
 
-	#div-sel2{
-	width:500px;
+#div-sel2{
+	width:900px;
 	height:500px;
-	float:right;
-	margin-right: 430px;
-	margin-top:45px;
-	border:5px solid white;
+	float: left;
+	margin-left:250px;
+	margin-top:50px;
 	line-height:30px;
 	border-radius:40px;
 	display: none;
-	background: rgba(0,0,0,0.7);
-		z-index: 1;
+	background: rgba(0,0,0,0.9);
+	z-index: 1;
 	position: absolute;
-
+	border: 1px solid #48CB83;
 	
 }
-#div-sel2form{
-	margin-top:100px;
-	margin-left:20px;
+
+
+
+#div-sel2 h2{
+	margin-top:30px;
 }
 
-#div-sel2 label{
-	color:white;
-
+#div-sel2 h3 {
+	color:#48CB83;
+	margin-left:200px;
+	font-weight: bold;
 }
+
+
+
+
+#div-sel2 label {
+	color:#fff;
+	margin-top: 10px;
+	margin-left: 20px;
+	font-weight: bold;
+}
+
 
 #div-sel2 input{
 	border:none;
 	border-bottom: 1px solid #fff;
 	background:transparent;
+	outline:none;
 	height:40px;
+	width:140px;
 	color:#fff;
 	font-size: :16px;
-}
-
-
-#div-sel3 h2{
-	margin-top:30px;
-}
-
-#div-sel3{
-	width:500px;
-	height:500px;
-	float:right;
-	margin-right: 430px;
-	margin-top:45px;
-	border:5px solid white;
-	line-height:30px;
-	border-radius:40px;
-	display: none;
-	background: rgba(0,0,0,0.7);
-		z-index: 1;
-	position: absolute;
+	margin-bottom: 20px;
+	margin-left:10px;
+	margin-top: 10px;
 	
 }
-#div-sel3 form{
-	margin-top:100px;
-	margin-left:20px;
-}
 
-#div-sel3 label{
-	color:white;
+#subject-contact{
+	position: absolute;
+	left:15%;
+	bottom: 60%;
 
 }
 
-#div-sel3 input{
+#msg-label {
+	position: absolute;
+	left:15%;
+	top:60%;
+	color:#fff;
+	font-weight: bold;
+
+}
+
+#msg-txtarea{
 	border:none;
-	border-bottom: 1px solid #fff;
+	border: 1px solid #fff;
 	background:transparent;
-	height:40px;
+	outline:none;
+	height:200px;
+	width:400px;
 	color:#fff;
 	font-size: :16px;
+	margin-top: 30px;
+	margin-left: 225px;
 }
 
 
-#div-sel3 h2{
-	margin-top:30px;
+
+#contact-bttn {
+
+	border:none;
+	outline:none;
+	height:40px;
+	width: 100px;
+	color:#fff;
+	font-size:20px;
+	background: #48CB83;
+	cursor: pointer;
+	border-radius: 20px;
+	position: absolute;
+	top:90%;
+	left:45%;
+
 }
 
-#div-sel1 #inp1{
-	margin-left:30px;
+#ex-bttn2{
+	border-radius:50%;
+	overflow:hidden;
+	position: absolute;
+	margin-top:60px;
+	background-color: white;
+	color: black;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	bottom: 94%;
+	left: 97%;
+	cursor: pointer;
+}
 }
 
-#div-sel1 #inp2{
-	margin-left:10px;
+#contact-bttn:hover
+{
+	background: #3F7AC3;
+	color:#252525;
 }
 
-#div-sel1 #inp3{
-	margin-left:10px;
-}
 
-#div-sel1 #inp4{
-	margin-left:4px;
-}
-
-#div-sel1 #inp5{
-	margin-left:36px;
-}
-
-#div-sel1 #inp6{
-	margin-left:29px;
-}
 
 
 #recomand {
@@ -400,4 +424,71 @@ a{
 	margin-left: 40px;
 	position: absolute;
 
+}
+
+#window-paragraph {
+	color:white;
+	margin-left:16px;
+	margin-right:6px;
+}
+
+#window-head{
+	margin-top: 20px;
+} 
+
+hr {
+	width: 90%;
+}
+
+h3{
+	color: white;
+}
+
+#reduceri_1 {
+	width: 200px;
+    height: 140px;
+	margin-left: 20px;
+	border-radius:50%;
+	overflow:hidden;
+	position: absolute;
+	margin-top: 40px;
+}
+
+
+#reduceri_2 {
+	width: 200px;
+    height: 140px;
+	margin-left: 250px;
+	border-radius:50%;
+	overflow:hidden;
+	position: absolute;
+	margin-top: 40px;
+}
+
+#equal {
+	height: 100px;
+	width: 100px;
+	color: white;
+	text-align: center;
+	font-size: 60px;
+	position: absolute;
+	margin-left: 450px;
+	margin-top: 80px;
+}
+
+#circle {
+	height: 150px;
+	width: 150px;
+	background: red;
+	border-radius:50%;
+	margin-left: 530px;
+	margin-top: 40px;
+	text-align: center;
+	position: absolute;
+
+}
+
+#circle-text {
+	margin-top:43px;
+	font-size: 50px;
 }
